// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prepare de → en > records the normalize, packager and publish exec calls with the expected argv 1`] = `
[
  [
    "aws",
    "s3",
    "cp",
    "s3://lingo-media/clips/demo-de.mp4",
    "<workRoot>/demo-de/source.mp4",
  ],
  [
    "ffprobe",
    "-v",
    "quiet",
    "-print_format",
    "json",
    "-show_format",
    "-show_streams",
    "<workRoot>/demo-de/source.mp4",
  ],
  [
    "ffmpeg",
    "-y",
    "-i",
    "<workRoot>/demo-de/source.mp4",
    "-vf",
    "scale=-2:1080",
    "-c:v",
    "libx264",
    "-preset",
    "medium",
    "-crf",
    "20",
    "-c:a",
    "aac",
    "-ac",
    "2",
    "-b:a",
    "192k",
    "<workRoot>/demo-de/mezz.mp4",
  ],
  [
    "packager",
    "in=<workRoot>/demo-de/mezz.mp4,stream=video,segment_template=<workRoot>/demo-de/hls/video/$Number$.m4s,init_segment=<workRoot>/demo-de/hls/video/init.mp4,playlist_name=video.m3u8",
    "in=<workRoot>/demo-de/mezz.mp4,stream=audio,segment_template=<workRoot>/demo-de/hls/audio/$Number$.m4s,init_segment=<workRoot>/demo-de/hls/audio/init.mp4,playlist_name=audio.m3u8,hls_group_id=audio,hls_name=Original,language=de",
    "in=<workRoot>/demo-de/de.vtt,stream=text,segment_template=<workRoot>/demo-de/hls/text_de/$Number$.vtt,playlist_name=text_de.m3u8,hls_group_id=text,hls_name=German,language=de",
    "in=<workRoot>/demo-de/native-en.vtt,stream=text,segment_template=<workRoot>/demo-de/hls/text_en/$Number$.vtt,playlist_name=text_en.m3u8,hls_group_id=text,hls_name=English,language=en",
    "--segment_duration",
    "4",
    "--default_language",
    "de",
    "--hls_master_playlist_output",
    "<workRoot>/demo-de/hls/master.m3u8",
  ],
  [
    "aws",
    "s3",
    "sync",
    "<workRoot>/demo-de/hls",
    "s3://lingo-media/published/demo-de/",
    "--delete",
    "--cache-control",
    "public,max-age=31536000,immutable",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-de/hls/master.m3u8",
    "s3://lingo-media/published/demo-de/master.m3u8",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "application/vnd.apple.mpegurl",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-de/de.vtt",
    "s3://lingo-media/published/demo-de/vtt/de.vtt",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "text/vtt",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-de/native-en.vtt",
    "s3://lingo-media/published/demo-de/vtt/en.vtt",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "text/vtt",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-de/clip.json",
    "s3://lingo-media/published/demo-de/clip.json",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "application/json",
  ],
]
`;

exports[`prepare en → de > records the normalize, packager and publish exec calls with the expected argv 1`] = `
[
  [
    "aws",
    "s3",
    "cp",
    "s3://lingo-media/clips/demo-en.mp4",
    "<workRoot>/demo-en/source.mp4",
  ],
  [
    "ffprobe",
    "-v",
    "quiet",
    "-print_format",
    "json",
    "-show_format",
    "-show_streams",
    "<workRoot>/demo-en/source.mp4",
  ],
  [
    "ffmpeg",
    "-y",
    "-i",
    "<workRoot>/demo-en/source.mp4",
    "-vf",
    "scale=-2:1080",
    "-c:v",
    "libx264",
    "-preset",
    "medium",
    "-crf",
    "20",
    "-c:a",
    "aac",
    "-ac",
    "2",
    "-b:a",
    "192k",
    "<workRoot>/demo-en/mezz.mp4",
  ],
  [
    "packager",
    "in=<workRoot>/demo-en/mezz.mp4,stream=video,segment_template=<workRoot>/demo-en/hls/video/$Number$.m4s,init_segment=<workRoot>/demo-en/hls/video/init.mp4,playlist_name=video.m3u8",
    "in=<workRoot>/demo-en/mezz.mp4,stream=audio,segment_template=<workRoot>/demo-en/hls/audio/$Number$.m4s,init_segment=<workRoot>/demo-en/hls/audio/init.mp4,playlist_name=audio.m3u8,hls_group_id=audio,hls_name=Original,language=en",
    "in=<workRoot>/demo-en/en.vtt,stream=text,segment_template=<workRoot>/demo-en/hls/text_en/$Number$.vtt,playlist_name=text_en.m3u8,hls_group_id=text,hls_name=English,language=en",
    "in=<workRoot>/demo-en/native-de.vtt,stream=text,segment_template=<workRoot>/demo-en/hls/text_de/$Number$.vtt,playlist_name=text_de.m3u8,hls_group_id=text,hls_name=German,language=de",
    "--segment_duration",
    "4",
    "--default_language",
    "en",
    "--hls_master_playlist_output",
    "<workRoot>/demo-en/hls/master.m3u8",
  ],
  [
    "aws",
    "s3",
    "sync",
    "<workRoot>/demo-en/hls",
    "s3://lingo-media/published/demo-en/",
    "--delete",
    "--cache-control",
    "public,max-age=31536000,immutable",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-en/hls/master.m3u8",
    "s3://lingo-media/published/demo-en/master.m3u8",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "application/vnd.apple.mpegurl",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-en/en.vtt",
    "s3://lingo-media/published/demo-en/vtt/en.vtt",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "text/vtt",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-en/native-de.vtt",
    "s3://lingo-media/published/demo-en/vtt/de.vtt",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "text/vtt",
  ],
  [
    "aws",
    "s3",
    "cp",
    "<workRoot>/demo-en/clip.json",
    "s3://lingo-media/published/demo-en/clip.json",
    "--cache-control",
    "public,max-age=60",
    "--content-type",
    "application/json",
  ],
]
`;
